Dashboard Displays List of to do items component and new to do item component but no functionality yet

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,14 @@
 <p>Welcome To The Dashboard</p>
+
+<div align="center" class="dashboard">
+  <div>
+    <app-todo-list></app-todo-list>
+  </div>
+</div>
+
+<div align="center" class="dashboard">
+  <div>
+    <app-new-todo-item></app-new-todo-item>
+  </div>
+</div>
+
